Management of files and images

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -260,8 +260,10 @@
   "common.ratings.down": "dislike",
   "common.upload.one": "Upload file",
   "common.upload.many": "Upload files",
+  "common.upload.images.many": "Upload images",
   "common.upload.delete.one": "Delete",
   "common.upload.delete.many": "Delete all files",
+  "common.upload.images.delete.many": "Delete all images",
   "common.upload.select.one": "Choose a file",
   "common.upload.select.many": "Chosse many files",
   "cookie.allow": "Allow cookies",
