End of merge (alt/an)

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -38,9 +38,10 @@
   "admin-permissions.visibility.public.title": "Open for All",
   "admin-permissions.visibility.title": "Visibility",
   "admin-sidebar.comments.title": "Comments",
+  "admin-sidebar.edit-forum.title": "Edit forum",
   "admin-sidebar.general.title": "General",
-  "admin-sidebar.tags-moderation.title": "Tags moderation",
   "admin-sidebar.permissions.title": "Privileges",
+  "admin-sidebar.tags-moderation.title": "Tags moderation",
   "admin-sidebar.tags.create": "Create",
   "admin-sidebar.tags.list": "List",
   "admin-sidebar.tags.title": "Categories",
@@ -59,18 +60,20 @@
   "admin-tags-form.placeholder.name": "Category name",
   "admin-tags-form.title.create": "Create category",
   "admin-tags-form.title.edit": "Edit category",
+  "admin-tags-moderation.column.count": "Count",
+  "admin-tags-moderation.column.tag": "Tag",
+  "admin-tags-moderation.popup.button": "Save",
+  "admin-tags-moderation.popup.find": "Search:",
+  "admin-tags-moderation.popup.replace": "Replace:",
+  "admin-tags-moderation.title": "Tags moderation",
   "admin-tags.list.add-tag": "New",
   "admin-tags.list.search.placeholder": "Search a category...",
   "admin-tags.list.title": "System categories",
-  "admin-tags-moderation.title": "Tags moderation",
-  "admin-tags-moderation.column.tag": "Tag",
-  "admin-tags-moderation.column.count": "Count",
-  "admin-tags-moderation.popup.find": "Search:",
-  "admin-tags-moderation.popup.replace": "Replace:",
-  "admin-tags-moderation.popup.button": "Save",
   "admin-topics-form.action.cause": "Cause",
+  "admin-topics-form.action.hierarchy": "Hierarchy",
   "admin-topics-form.action.none": "No action",
   "admin-topics-form.action.poll": "Poll",
+  "admin-topics-form.action.slider": "Slider",
   "admin-topics-form.action.vote": "Vote",
   "admin-topics-form.alert.no-tags": "No categories were found, please create one before start creating topics",
   "admin-topics-form.alert.no-tags.no-staff": "No categoies were found, no topics can be created yet",
@@ -113,7 +116,9 @@
   "admin-topics-form.label.closingAt": "Closing at",
   "admin-topics-form.label.cover": "Image",
   "admin-topics-form.label.coverUrl": "Cover URL",
+  "admin-topics-form.label.hierarchy-options": "Hierarchy options",
   "admin-topics-form.label.mediaTitle": "Title",
+  "admin-topics-form.label.multiple": "Multiple choice",
   "admin-topics-form.label.poll-options": "Poll options",
   "admin-topics-form.label.resources": "Resources",
   "admin-topics-form.label.source": "Source",
@@ -122,11 +127,13 @@
   "admin-topics-form.label.tags": "Tags",
   "admin-topics-form.label.topicId": "Official Id",
   "admin-topics-form.label.votable": "Votable",
-  "admin-topics-form.message.cant-edit-action": "There are votes already casted, voting method can't be modified after that.",
+  "admin-topics-form.message.cant-edit-action": "There are votes already casted, the action can't be modified after that.",
   "admin-topics-form.message.cant-edit-action.options": "There are votes already casted, options can't be modified after that.",
+  "admin-topics-form.message.cant-edit-topic": "There are votes already casted, the topic can't be modified after that.",
   "admin-topics-form.message.onsuccess": "Topic successfuly saved",
   "admin-topics-form.message.private-status": "This topic is a draft",
   "admin-topics-form.message.public-status": "This topic is published to public",
+  "admin-topics-form.message.validation.hierarchyOptions-required": "Must add options to the hierarchy",
   "admin-topics-form.message.validation.mediaTitle-required": "Media title required",
   "admin-topics-form.message.validation.pollOptions-required": "Must add options to the poll",
   "admin-topics-form.message.validation.source-invalid": "Source must be a valid URL",
@@ -164,8 +171,8 @@
   "admin-whitelist.delete-whitelist.confirmation.ok": "Delete",
   "admin-whitelist.delete-whitelist.confirmation.title": "Delete rule",
   "admin-whitelist.type": "Type",
-  "admin-whitelist.type.email": "Email",
   "admin-whitelist.type.domain": "Domain name",
+  "admin-whitelist.type.email": "Email",
   "admin-whitelist.value": "Value",
   "admin-whitelists-form.button.delete": "Delete",
   "admin-whitelists-form.button.submit": "Save",
@@ -185,8 +192,8 @@
   "comments.argument-limited": "Argument is limited to 4096 characters",
   "comments.arguments": "Arguments",
   "comments.arguments.confirm-remove": "Do you want to remove this reply?",
-  "comments.arguments.reply": "Reply to this argument",
   "comments.arguments.replies": "view / hide all replies",
+  "comments.arguments.reply": "Reply to this argument",
   "comments.arguments.view": "View this comment",
   "comments.cannot-be-empty": "Argument cannot be empty",
   "comments.cannot-remove": "Comment has replies, cannot be removed!",
@@ -212,8 +219,8 @@
   "comments.score.not-allowed": "You're not allowed to qualify this argument",
   "comments.send": "Send",
   "comments.sign-in-required": "You must be signed in to argue here",
-  "comments.title.placeholder": "Title",
   "comments.sign-in-required-to-vote-comments": "You must be signed in to up/downvote arguments",
+  "comments.title.placeholder": "Title",
   "comments.votes": "votes",
   "comments.your-argument": "Your argument",
   "comments.your.arguments": "Your arguments",
@@ -224,39 +231,40 @@
   "common.cancel": "Cancel",
   "common.close": "Closes",
   "common.closed": "Closed",
+  "common.comment": "comment",
+  "common.comments": "comments",
   "common.copy.link": "Copy link to clipboard",
   "common.copy.ref": "Copy reference to clipboard",
   "common.edit": "Edit",
+  "common.filter": "filter",
   "common.internal-error": "There was an error.",
   "common.more-information": "More information",
   "common.no-user-for-email": "No user found for that email address",
   "common.ok": "Ok",
   "common.or": "or",
   "common.pass-match-error": "Don't match.",
-  "common.read-more": "Read more",
+  "common.ratings": "ratings",
+  "common.ratings.down": "dislike",
+  "common.ratings.up": "like",
   "common.read-less": "Read less",
+  "common.read-more": "Read more",
   "common.share.facebook": "Share on Facebook",
   "common.share.twitter": "Share on Twitter",
   "common.sorts.by-title-asc": "title a -> z",
   "common.sorts.closing-soon": "closing soon",
+  "common.sorts.filter": "filter",
+  "common.sorts.filters": "filters",
+  "common.sorts.label": "tri",
   "common.sorts.newest-first": "newest",
   "common.sorts.oldest-first": "oldest",
   "common.sorts.random": "shuffle",
   "common.sorts.recently-updated": "recently updated",
   "common.sorts.score": "Relevance",
-  "common.sorts.label": "tri",
-  "common.sorts.filter": "filter",
-  "common.sorts.filters": "filters",
   "common.user": "participant",
   "common.users": "participants",
-  "common.comment": "comment",
-  "common.comments": "comments",
   "common.view": "View",
   "common.vote": "vote",
   "common.votes": "votes",
-  "common.ratings": "ratings",
-  "common.ratings.up": "like",
-  "common.ratings.down": "dislike",
   "cookie.allow": "Allow cookies",
   "cookie.decline": "Decline",
   "cookie.message": "This website uses cookies to ensure you get the best experience on our website.",
@@ -272,6 +280,7 @@
   "forum.form.copy-suffix": "-copy",
   "forum.form.cover": "Image URL",
   "forum.form.create.submit": "Create",
+  "forum.form.edit.submit": "Edit",
   "forum.form.summary.label": "Summary",
   "forum.form.summary.placeholder": "What is your forum about?",
   "forum.form.title.copy": "Duplicate a forum",
@@ -284,9 +293,20 @@
   "forum.form.topicsAttrs.nextTopic": "Enable link \"Next topic\"",
   "forum.form.url.label": "Democracy URL",
   "forum.form.url.unavailable": "URL is not available",
+  "forum.list.search.placeholder": "Search a forum",
   "forum.status.creating": "Creating community...",
   "forum.status.destroying": "Destroying...",
   "forum.status.error": "There was an error in this community, try again later please.",
+  "forum.visibility.closed.description": "Anyone can see the content. You choose who can participate.",
+  "forum.visibility.closed.title": "Restricted",
+  "forum.visibility.collaborative.description": "Anyone can see and create content and also will be able to participate.",
+  "forum.visibility.collaborative.title": "Collaborative",
+  "forum.visibility.confirm": "Are you sure you want to make this forum '{visibility}'?",
+  "forum.visibility.private.description": "You choose who can see this forum.",
+  "forum.visibility.private.title": "Secret",
+  "forum.visibility.public.description": "Anyone can see the content and will be able to participate.",
+  "forum.visibility.public.title": "Open for All",
+  "forum.visibility.title": "Visibility",
   "header.admin": "Manage",
   "header.forums": "My Communities",
   "header.insecure-warning": "Warning: You are using an insecure version of DemocracyOS. See the docs for details on implementing SSL.",
@@ -302,14 +322,16 @@
   "help.title": "Help",
   "help.tos.title": "Terms of Service",
   "homepage.create-debate": "Create my first topic",
-  "homepage.no-topics": "There are no topics to display",
-  "homepage.featured.last.title": "Last comments",
+  "homepage.featured.button.topic": "View topic",
+  "homepage.featured.help.description": "Contribute to the identification of the best contributions by expressing your opinion on the propositions of other participants which are randomly presented to you.",
+  "homepage.featured.help.title": "Help us to evaluate the new propositions",
   "homepage.featured.last.description": "",
   "homepage.featured.last.empty": "",
-  "homepage.featured.voted.title": "Most rated of all time",
+  "homepage.featured.last.title": "Last comments",
+  "homepage.featured.others.title": "Discover other propositions",
   "homepage.featured.voted.description": "",
   "homepage.featured.voted.empty": "No votes",
-  "homepage.featured.votedToday.title": "Most rated of today",
+  "homepage.featured.voted.title": "Most rated of all time",
   "homepage.featured.votedToday.description": "",
   "homepage.featured.votedToday.empty": "No votes today",
   "homepage.featured.help.title": "Help us to evaluate the new proposals",
@@ -317,8 +339,10 @@
   "homepage.featured.others.title": "Discover other proposals",
   "homepage.featured.button.refresh": "More proposals",
   "homepage.featured.button.topic": "View topic",
+  "homepage.featured.votedToday.title": "Most rated of today",
+  "homepage.no-topics": "There are no topics to display",
   "invalid.password": "Invalid password",
-  "ldap.error.default" : "LDAP error : ",
+  "ldap.error.default": "LDAP error : ",
   "markdown.cheatsheet.title": "Formatting help",
   "markdown.comments.formatting-help": "Formatting help",
   "markdown.emphasis.example.1": "Emphasis, aka italics, with *asterisks* or _underscores_.",
@@ -379,19 +403,33 @@
   "proposal-article.participant.singular": "Participant",
   "proposal-article.view-original-text": "View the original text",
   "proposal-article.warning.leaving-without-vote": "You are about to leave this page without validating your vote.\nAre you sure?",
+  "proposal-behavior.hierarchy": "Choose your hierarchy according to your priority.",
+  "proposal-behavior.hierarchy.result": "Results",
   "proposal-options.abstain": "Abstain",
-  "proposal-options.change-vote": "I want to change my vote",
+  "proposal-options.change-vote": "Change vote",
   "proposal-options.error.voting": "An error occurred while processing your vote. Please try again",
   "proposal-options.must-be-signed-in": "You must be signed in to vote on this topic",
   "proposal-options.nay": "Nay",
   "proposal-options.no-votes-cast": "No votes cast",
   "proposal-options.vote": "Vote",
   "proposal-options.vote-item": "vote",
+  "proposal-options.voted": "You already voted.",
   "proposal-options.voted-abstained": "You abstained from voting",
   "proposal-options.voted-nay": "You voted Nay",
+  "proposal-options.voted-negative-percentage": "Your answer was: {vote}",
+  "proposal-options.voted-positive-percentage": "Your answer was: {vote}",
   "proposal-options.voted-yea": "You voted Yea",
   "proposal-options.votes-cast": "{num} votes cast",
   "proposal-options.yea": "Yea",
+  "proposal-result.little-against": "Somewhat \n against",
+  "proposal-result.little-support": "Somewhat \n support",
+  "proposal-result.middle-against": "Against",
+  "proposal-result.middle-high-against": "Strongly \n against",
+  "proposal-result.middle-high-support": "Strongly \n support",
+  "proposal-result.middle-support": "Support",
+  "proposal-result.neutral": "Neutral",
+  "proposal-result.very-against": "Very \n against",
+  "proposal-result.very-support": "Very \n support",
   "proposal-social.title": "Contribution",
   "resend-validation-email-form.error.email-not-valid.no-link": "The email address for this user is not validated. We send users a welcome email when they sign up. Please check your email (remember to check your spam folder too) and click on the link supplied on the email.",
   "settings-forums.delete.confirmation.body": "Once you delete a community, there is no going back. Please make sure you understand the consequences of what you're about to do",
@@ -414,6 +452,7 @@
   "settings.locale": "Language",
   "settings.locale.ca": "Catalan",
   "settings.locale.de": "Deutsche",
+  "settings.locale.el": "Greek",
   "settings.locale.en": "English",
   "settings.locale.es": "Spanish",
   "settings.locale.fi": "Finnish",
@@ -486,8 +525,9 @@
   "signup.resend-validation-email": "Resend validation email",
   "signup.resend-validation-email-complete": "Resend validation email complete",
   "signup.retype-password": "Re-type password",
-  "signup.username": "Nickname",
+  "signup.user-already-registered": "A user with the given username is already registered",
   "signup.user-already-validated": "This user already validated the email address",
+  "signup.username": "Nickname",
   "signup.validating": "Validating account.",
   "signup.validation-email-resent": "The validation email was resent.",
   "signup.welcome": "Welcome, {name}!",
@@ -496,7 +536,6 @@
   "signup.your-firstname": "Your firstname",
   "signup.your-lastname": "Your lastname",
   "signup.your-username": "Your username",
-  "signup.user-already-registered": "A user with the given username is already registered",
   "sorts.by-title-asc": "By title A -> Z",
   "sorts.closing-soon": "Closing soon",
   "sorts.newest-first": "Newest first",
@@ -509,11 +548,11 @@
   "system.user-badges": "Stickers",
   "system.user-badges.title": "User stickers",
   "system.users.message.onsuccess": "User saved successfully",
+  "system.users.search.placeholder": "Search users...",
   "system.users.title.create": "Add user",
   "system.users.title.edit": "Edit user",
-  "system.users.search.placeholder": "Search users...",
   "topics.actions.cause.do": "Add my Support",
-  "topics.actions.cause.done": "You Support this",
+  "topics.actions.cause.done": "You don't want to support this",
   "topics.actions.poll.do": "Vote",
   "user.extra.age.1": "less than 15",
   "user.extra.age.10": "55-59",
@@ -539,7 +578,10 @@
   "user.extra.job.2": "Company",
   "user.extra.job.3": "Public agent",
   "user.extra.job.4": "Professional",
-  "user.extra.job.5": "Other",
+  "user.extra.job.5": "Artisan",
+  "user.extra.job.6": "Retired",
+  "user.extra.job.7": "Unemployed",
+  "user.extra.job.8": "Other",
   "user.extra.job.label": "Activity",
   "user.extra.org.label": "Organization",
   "user.extra.postal.label": "Postal code",
@@ -563,15 +605,5 @@
   "validators.min-length.singular": "It must be at least 1 character",
   "validators.not.match": "No match",
   "validators.password.not.match": "Passwords do not match",
-  "validators.required": "Required",
-  "forum.visibility.closed.description": "Anyone can see the content. You choose who can participate.",
-  "forum.visibility.closed.title": "Restricted",
-  "forum.visibility.collaborative.description": "Anyone can see and create content and also will be able to participate.",
-  "forum.visibility.collaborative.title": "Collaborative",
-  "forum.visibility.confirm": "Are you sure you want to make this forum '{visibility}'?",
-  "forum.visibility.private.description": "You choose who can see this forum.",
-  "forum.visibility.private.title": "Secret",
-  "forum.visibility.public.description": "Anyone can see the content and will be able to participate.",
-  "forum.visibility.public.title": "Open for All",
-  "forum.visibility.title": "Visibility"
+  "validators.required": "Required"
 }
