--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -38,8 +38,10 @@
   "admin-permissions.visibility.public.title": "Ouvert à tous",
   "admin-permissions.visibility.title": "Visibilité",
   "admin-sidebar.comments.title": "Commentaires",
+  "admin-sidebar.edit-forum.title": "Modifier",
   "admin-sidebar.general.title": "Général",
   "admin-sidebar.permissions.title": "Autorisations",
+  "admin-sidebar.tags-moderation.title": "Modération des tags",
   "admin-sidebar.tags.create": "Créer",
   "admin-sidebar.tags.list": "Liste",
   "admin-sidebar.tags.title": "Catégories",
@@ -58,12 +60,20 @@
   "admin-tags-form.placeholder.name": "Nom de la catégorie",
   "admin-tags-form.title.create": "Nouvelle catégorie",
   "admin-tags-form.title.edit": "Modifier la catégorie",
+  "admin-tags-moderation.column.count": "Compteur",
+  "admin-tags-moderation.column.tag": "Tag",
+  "admin-tags-moderation.popup.button": "Enregistrer",
+  "admin-tags-moderation.popup.find": "Rechercher:",
+  "admin-tags-moderation.popup.replace": "Remplacer:",
+  "admin-tags-moderation.title": "Modération des tags",
   "admin-tags.list.add-tag": "Nouvelle",
   "admin-tags.list.search.placeholder": "Rechercher une catégorie ...",
   "admin-tags.list.title": "Liste des catégories",
   "admin-topics-form.action.cause": "Pétition",
+  "admin-topics-form.action.hierarchy": "Classement",
   "admin-topics-form.action.none": "Aucune",
   "admin-topics-form.action.poll": "Sondage",
+  "admin-topics-form.action.slider": "Jauge",
   "admin-topics-form.action.vote": "Vote",
   "admin-topics-form.alert.no-tags": "Aucune catégorie n'a été trouvée, merci d'en créer une avant de commencer à créer des débats",
   "admin-topics-form.alert.no-tags.no-staff": "Aucune catégorie n'a été trouvée, impossible de créer un débat",
@@ -106,6 +116,7 @@
   "admin-topics-form.label.closingAt": "Date de clôture",
   "admin-topics-form.label.cover": "Image de couverture",
   "admin-topics-form.label.coverUrl": "URL de l'image",
+  "admin-topics-form.label.hierarchy-options": "Options du classement",
   "admin-topics-form.label.mediaTitle": "Titre",
   "admin-topics-form.label.multiple": "Autoriser les choix multiples",
   "admin-topics-form.label.poll-options": "Options du sondage",
@@ -116,11 +127,15 @@
   "admin-topics-form.label.tags": "Tags",
   "admin-topics-form.label.topicId": "Identifiant officiel",
   "admin-topics-form.label.votable": "Soumis au vote",
-  "admin-topics-form.message.cant-edit-action": "Il y a déjà eu des votes sur ce sondage, les options ne peuvent pas être modifiées.",
+  "admin-topics-form.message.cant-edit-action": "Il y a déjà eu des votes, l'action de vote ne peut pas être modifiée après cela.",
+  "admin-topics-form.message.cant-edit-action.options": "Il y a déjà eu des votes, les options de vote ne peuvent pas être modifiées après cela.",
+  "admin-topics-form.message.cant-edit-topic": "Il y a déjà eu des votes, le débat ne peut pas être modifié après cela.",
   "admin-topics-form.message.onsuccess": "Le débat a été sauvegardé avec succès",
   "admin-topics-form.message.private-status": "Ce débat est un brouillon",
   "admin-topics-form.message.public-status": "Ce débat est publié",
+  "admin-topics-form.message.validation.hierarchyOptions-required": "Vous devez ajouter des options au classement",
   "admin-topics-form.message.validation.mediaTitle-required": "Titre requis",
+  "admin-topics-form.message.validation.pollOptions-required": "Vous devez ajouter des options au sondage",
   "admin-topics-form.message.validation.source-invalid": "La source doit être une URL valide",
   "admin-topics-form.message.validation.source-required": "Source requise",
   "admin-topics-form.message.validation.topicId-required": "Identifiant officiel requis",
@@ -156,8 +171,8 @@
   "admin-whitelist.delete-whitelist.confirmation.ok": "Supprimer",
   "admin-whitelist.delete-whitelist.confirmation.title": "Supprimer la règle",
   "admin-whitelist.type": "Type",
-  "admin-whitelist.type.email": "Courriel",
   "admin-whitelist.type.domain": "Nom de domaine",
+  "admin-whitelist.type.email": "Courriel",
   "admin-whitelist.value": "Valeur",
   "admin-whitelists-form.button.delete": "Supprimer",
   "admin-whitelists-form.button.submit": "Sauvegarder",
@@ -177,8 +192,8 @@
   "comments.argument-limited": "Le commentaire ne peut pas excéder 4096 caractères",
   "comments.arguments": "Commentaires",
   "comments.arguments.confirm-remove": "Voulez-vous supprimer ce commentaire ?",
-  "comments.arguments.reply": "Répondre à ce commentaire",
   "comments.arguments.replies": "afficher / masquer toutes les réponses",
+  "comments.arguments.reply": "Répondre à ce commentaire",
   "comments.arguments.view": "Voir ce commentaire",
   "comments.cannot-be-empty": "Le commentaire ne peut pas être vide",
   "comments.cannot-remove": "Le commentaire a reçu des réponses et ne peut pas être supprimé !",
@@ -216,6 +231,8 @@
   "common.cancel": "Annuler",
   "common.close": "Ferme",
   "common.closed": "Fermé",
+  "common.comment": "commentaire",
+  "common.comments": "commentaires",
   "common.copy.link": "Copier le lien dans le presse papier",
   "common.copy.ref": "Copier la référence dans le presse papier",
   "common.edit": "Modifier",
@@ -226,30 +243,28 @@
   "common.ok": "Ok",
   "common.or": "ou",
   "common.pass-match-error": "Ne correspondent pas.",
-  "common.read-more": "Lire plus",
+  "common.ratings": "appréciations",
+  "common.ratings.down": "désapprobation",
+  "common.ratings.up": "approbation",
   "common.read-less": "Lire moins",
+  "common.read-more": "Lire plus",
   "common.share.facebook": "Partager sur Facebook",
   "common.share.twitter": "Partager sur Twitter",
   "common.sorts.by-title-asc": "titre de A -> Z",
   "common.sorts.closing-soon": "clôture proche",
+  "common.sorts.filter": "filtrer",
+  "common.sorts.filters": "filtres",
+  "common.sorts.label": "tri",
   "common.sorts.newest-first": "plus récents",
   "common.sorts.oldest-first": "plus anciens",
   "common.sorts.random": "aléatoire",
   "common.sorts.recently-updated": "mis à jour récemment",
   "common.sorts.score": "score",
-  "common.sorts.label": "tri",
-  "common.sorts.filter": "filtrer",
-  "common.sorts.filters": "filtres",
   "common.user": "participant",
   "common.users": "participants",
-  "common.comment": "commentaire",
-  "common.comments": "commentaires",
   "common.view": "Voir",
   "common.vote": "vote",
   "common.votes": "votes",
-  "common.ratings": "appréciations",
-  "common.ratings.up": "approbation",
-  "common.ratings.down": "désapprobation",
   "cookie.allow": "Autoriser les cookies",
   "cookie.decline": "Refuser",
   "cookie.message": "Ce site utilise des cookies pour l'authentification et une expérience de navigation optimale.",
@@ -265,6 +280,7 @@
   "forum.form.copy-suffix": "-copie",
   "forum.form.cover": "Image URL",
   "forum.form.create.submit": "Créer une consultation",
+  "forum.form.edit.submit": "Modifier",
   "forum.form.summary.label": "Description",
   "forum.form.summary.placeholder": "Quel est l'objet de votre consultation ?",
   "forum.form.title.copy": "Dupliquer un espace de consultation",
@@ -281,6 +297,16 @@
   "forum.status.creating": "Création de votre consultation...",
   "forum.status.destroying": "Suppression...",
   "forum.status.error": "Une erreur s'est produite, merci de recommencer plus tard.",
+  "forum.visibility.closed.description": "N'importe qui peut voir le contenu. Vous choisissez qui peut participer.",
+  "forum.visibility.closed.title": "Restreint",
+  "forum.visibility.collaborative.description": "Toute personne peut voir et créer du contenu et pourra également participer.",
+  "forum.visibility.collaborative.title": "Collaboratif",
+  "forum.visibility.confirm": "Êtes-vous sûr de vouloir rendre ce forum '{visibility}'?",
+  "forum.visibility.private.description": "Vous choisissez qui peut voir ce forum.",
+  "forum.visibility.private.title": "Privé",
+  "forum.visibility.public.description": "Toute personne peut voir le contenu de ce forum et pourra participer.",
+  "forum.visibility.public.title": "Ouvert à tous",
+  "forum.visibility.title": "Visibilité",
   "header.admin": "Gérer",
   "header.forums": "Mes consultations",
   "header.insecure-warning": "Avertissement: Vous utilisez une version non sécurisée de DemocracyOS. Consultez la documentation pour plus de détails sur la mise en place du SSL.",
@@ -296,14 +322,16 @@
   "help.title": "Assistance",
   "help.tos.title": "Conditions d'utilisation",
   "homepage.create-debate": "Créer mon premier débat",
-  "homepage.no-topics": "Il n'y a pas de débat à afficher",
-  "homepage.featured.last.title": "Derniers commentaires",
+  "homepage.featured.button.topic": "Accéder au débat",
+  "homepage.featured.help.description": "Contribuez à l'analyse des meilleures contributions en exprimant votre avis sur les propositions d'autres participants qui vous sont présentées de manière aléatoire.",
+  "homepage.featured.help.title": "Aidez-nous à évaluer les nouvelles propositions",
   "homepage.featured.last.description": "",
   "homepage.featured.last.empty": " ",
-  "homepage.featured.voted.title": "Les plus votés au total",
+  "homepage.featured.last.title": "Derniers commentaires",
+  "homepage.featured.others.title": "Découvrez d'autres propositions",
   "homepage.featured.voted.description": "",
   "homepage.featured.voted.empty": "Aucun vote",
-  "homepage.featured.votedToday.title": "Les plus votés aujourd'hui",
+  "homepage.featured.voted.title": "Les plus votés au total",
   "homepage.featured.votedToday.description": "",
   "homepage.featured.votedToday.empty": "Aucun vote aujourd'hui",
   "homepage.featured.help.title": "Aidez-nous à évaluer les nouvelles propositions",
@@ -311,8 +339,10 @@
   "homepage.featured.others.title": "Découvrez d'autres propositions",
   "homepage.featured.button.topic": "Accéder au débat",
   "homepage.featured.button.refresh": "Évaluer d'autres propositions",
+  "homepage.featured.votedToday.title": "Les plus votés aujourd'hui",
+  "homepage.no-topics": "Il n'y a pas de débat à afficher",
   "invalid.password": "Mot de passe invalide",
-  "ldap.error.default" : "Erreur LDAP : ",
+  "ldap.error.default": "Erreur LDAP : ",
   "markdown.cheatsheet.title": "Mise en forme des textes",
   "markdown.comments.formatting-help": "Aide à la mise en forme des textes",
   "markdown.emphasis.example.1": "Emphase faible (italique) avec des *astérisques* ou des _tirets bas_.",
@@ -373,6 +403,8 @@
   "proposal-article.participant.singular": "Participant",
   "proposal-article.view-original-text": "Voir la référence externe",
   "proposal-article.warning.leaving-without-vote": "Vous allez quitter la page sans avoir validé votre vote.\nÊtes-vous sûr de votre choix?",
+  "proposal-behavior.hierarchy": "Classer les options selon vos préférences.",
+  "proposal-behavior.hierarchy.result": "Résultats",
   "proposal-options.abstain": "Abstention",
   "proposal-options.change-vote": "Je veux changer mon vote",
   "proposal-options.error.voting": "Une erreur s'est produite lors du traitement de votre vote. Veuillez essayer à nouveau",
@@ -381,11 +413,23 @@
   "proposal-options.no-votes-cast": "Sans votes exprimés",
   "proposal-options.vote": "Vote",
   "proposal-options.vote-item": "vote",
+  "proposal-options.voted": "Vous avez déjà voté.",
   "proposal-options.voted-abstained": "Vous vous êtes abstenu",
   "proposal-options.voted-nay": "Vous avez voté CONTRE",
+  "proposal-options.voted-negative-percentage": "Votre vote était: {vote}",
+  "proposal-options.voted-positive-percentage": "Votre vote était: {vote}",
   "proposal-options.voted-yea": "Vous avez voté POUR",
   "proposal-options.votes-cast": "{num} votes comptés",
   "proposal-options.yea": "Pour",
+  "proposal-result.little-against": "Plutôt \n contre",
+  "proposal-result.little-support": "Plutôt \n pour",
+  "proposal-result.middle-against": "Contre",
+  "proposal-result.middle-high-against": "Largement \n contre",
+  "proposal-result.middle-high-support": "Largement \n pour",
+  "proposal-result.middle-support": "Pour",
+  "proposal-result.neutral": "Neutre",
+  "proposal-result.very-against": "Fortement \n contre",
+  "proposal-result.very-support": "Fortement \n pour",
   "proposal-social.title": "Participation",
   "resend-validation-email-form.error.email-not-valid.no-link": "L'adresse e-mail pour cet utilisateur n'est pas validé.<br/>Nous envoyons un email de bienvenue aux utilisateurs lors de leur inscription.Veuillez vérifier votre e-mail (y compris votre dossier spam) et cliquer sur le lien fourni dans l'email.",
   "settings-forums.delete.confirmation.body": "La suppression d'une consultation est définitive. L'ensemble des débats et des contributions associés seront supprimés. Merci de bien mesurer les conséquences de cette action.",
@@ -481,6 +525,7 @@
   "signup.resend-validation-email": "Renvoyer l'email de validation",
   "signup.resend-validation-email-complete": "Email de validation renvoyé",
   "signup.retype-password": "Retapez votre mot de passe",
+  "signup.user-already-registered": "Un utilisateur avec le même pseudonyme existe déjà.",
   "signup.user-already-validated": "Ce participant a déjà validé son adresse email",
   "signup.username": "Pseudonyme",
   "signup.validating": "Inscription en cours de validation",
@@ -498,9 +543,9 @@
   "system.user-badges": "Badges",
   "system.user-badges.title": "Badges",
   "system.users.message.onsuccess": "Utilisateur sauvegardé avec succès",
+  "system.users.search.placeholder": "Rechercher un utilisateur ...",
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
-  "system.users.search.placeholder": "Rechercher un utilisateur ...",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
   "topics.actions.poll.do": "Voter",
@@ -555,15 +600,5 @@
   "validators.min-length.singular": "1 caractère au minimum",
   "validators.not.match": "Aucun résultat",
   "validators.password.not.match": "Les mots de passe ne correspondent pas",
-  "validators.required": "Requis",
-  "forum.visibility.closed.description": "N'importe qui peut voir le contenu. Vous choisissez qui peut participer.",
-  "forum.visibility.closed.title": "Restreint",
-  "forum.visibility.collaborative.description": "Toute personne peut voir et créer du contenu et pourra également participer.",
-  "forum.visibility.collaborative.title": "Collaboratif",
-  "forum.visibility.confirm": "Êtes-vous sûr de vouloir rendre ce forum '{visibility}'?",
-  "forum.visibility.private.description": "Vous choisissez qui peut voir ce forum.",
-  "forum.visibility.private.title": "Privé",
-  "forum.visibility.public.description": "Toute personne peut voir le contenu de ce forum et pourra participer.",
-  "forum.visibility.public.title": "Ouvert à tous",
-  "forum.visibility.title": "Visibilité"
+  "validators.required": "Requis"
 }
