Add associationName and creationReason inputs on forum. Add the possibility of publishind and depublishing forums by staff members only

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -117,9 +117,11 @@
   "admin-topics-form.label.cover": "Image",
   "admin-topics-form.label.coverUrl": "Cover URL",
   "admin-topics-form.label.hierarchy-options": "Hierarchy options",
+  "admin-topics-form.clarification.hierarchy-options":"To add Hierarchy options you must enter an option then press TAB to enter a new",
   "admin-topics-form.label.mediaTitle": "Title",
   "admin-topics-form.label.multiple": "Multiple choice",
   "admin-topics-form.label.poll-options": "Poll options",
+  "admin-topics-form.clarification.poll-options":"To add polling options you must enter an option then press TAB to enter a new",
   "admin-topics-form.label.resources": "Resources",
   "admin-topics-form.label.source": "Source",
   "admin-topics-form.label.summary": "Content",
@@ -283,6 +285,10 @@
   "forum.form.edit.submit": "Edit",
   "forum.form.summary.label": "Summary",
   "forum.form.summary.placeholder": "What is your forum about?",
+  "forum.form.associationName.label":"Association",
+  "forum.form.associationName.placeholder": "Name of your association ",
+  "forum.form.creationReason.label": "Reason",
+  "forum.form.creationReason.placeholder": "Why do you want to create this consultation ?",
   "forum.form.title.copy": "Duplicate a forum",
   "forum.form.title.create": "Create a forum",
   "forum.form.title.label": "Forum title",
