Some bugs fix on upload

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -556,6 +556,7 @@
   "system.users.search.placeholder": "Search users...",
   "system.users.title.create": "Add user",
   "system.users.title.edit": "Edit user",
+  "system.upload":"Files",
   "topics.actions.cause.do": "Add my Support",
   "topics.actions.cause.done": "You don't want to support this",
   "topics.actions.poll.do": "Vote",
