--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -563,6 +563,7 @@
   "system.users.search.placeholder": "Rechercher un utilisateur ...",
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
+  "system.upload":"Fichiers",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
   "topics.actions.poll.do": "Voter",
