Add upload justificatory  on Forum

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -302,6 +302,7 @@
   "forum.form.topicsAttrs.nextTopic": "Enable link \"Next topic\"",
   "forum.form.url.label": "Democracy URL",
   "forum.form.url.unavailable": "URL is not available",
+  "forum.form.justificatory": "Justificatory",
   "forum.list.search.placeholder": "Search a forum",
   "forum.status.creating": "Creating community...",
   "forum.status.destroying": "Destroying...",
@@ -557,6 +558,7 @@
   "system.users.title.create": "Add user",
   "system.users.title.edit": "Edit user",
   "system.upload":"Files",
+  "system.list.add" :"Add Forum",
   "topics.actions.cause.do": "Add my Support",
   "topics.actions.cause.done": "You don't want to support this",
   "topics.actions.poll.do": "Vote",
