--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -312,6 +312,7 @@
   "forum.form.topicsAttrs.nextTopic": "Activer le lien \"Débat suivant\"",
   "forum.form.url.label": "Chemin",
   "forum.form.url.unavailable": "L'URL n'est pas disponible",
+  "forum.form.justificatory": "Justificatif",
   "forum.list.search.placeholder": "Rechercher une consultation ...",
   "forum.status.creating": "Création de votre consultation...",
   "forum.status.destroying": "Suppression...",
@@ -564,6 +565,7 @@
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
   "system.upload":"Fichiers",
+  "system.list.add" :"Créer une consultation",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
   "topics.actions.poll.do": "Voter",
